# nutric

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/lib/: models.py
backend/src/lib/db/: mongodb.py
backend/src/lib/estimate/: estimate.py  prompts.py  recipes.py
backend/src/routers/: entries.py  targets.py
backend/tests/: test_estimate.py  test_from_recipe.py
frontend/: components.json  package-lock.json  package.json
frontend/app/: actions.ts  layout.tsx  page.tsx
frontend/app/(main)/: actions.ts  layout.tsx  page.tsx
frontend/app/(main)/handler/[...stack]/: layout.tsx  page.tsx
frontend/app/(main)/log/: Cards.tsx  EntryCard.tsx  ProgressBar.tsx  TotalCard.tsx  page.tsx
frontend/app/(main)/ui/: NavMenu.tsx
frontend/app/api/ping/: route.ts
frontend/app/ui/: EstimateCard.tsx  EstimateFromRecipeCard.tsx  EstimateInputForm.tsx  NavMenu.tsx
frontend/app/ui/Calculator/: Buttons.tsx  InputForm.tsx
frontend/app/ui/InputForm/: Buttons.tsx  InputForm.tsx  NutritionBreakdown.tsx
frontend/lib/: types.ts
recipe-scraper/: README.md  pyproject.toml  requirements.txt  vercel.json
recipe-scraper/lib/: prompts.py
recipe-scraper/src/: main.py  test-estimate.py  test-scraper.py
recipe-scraper/src/lib/: estimate.py  models.py  prompts.py  recipes.py  setup.py  typing.py
recipe-scraper/src/lib/db/: mongodb.py
recipe-scraper/src/lib/estimate/: estimate.py  recipes.py
recipe-scraper/src/routers/: calculator.py  entries.py
recipe-scraper/tests/: test_estimate.py  test_from_recipe.py
(+6 files in other folders)
